name:                haskell-elm-gameserver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-elm-gameserver#readme
license:             MIT
license-file:        LICENSE
author:              schroffl
maintainer:          example@example.com
copyright:           2017 schroffl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
                     , unagi-chan
  default-language:    Haskell2010

executable haskell-elm-gameserver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-elm-gameserver
                     , websockets
                     , text
                     , unagi-chan
  default-language:    Haskell2010

test-suite haskell-elm-gameserver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-elm-gameserver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schroffl/haskell-elm-gameserver
